# bevy_robomaster_simulator

./: .gitignore  Cargo.toml  README.md  bj_env.sh  build.sh  cargo-wrapper.sh  clippy_no_ros2.sh  config.toml  dupast.toml  run.sh  run_no_ros2.sh
.githooks/: pre-commit
assets/: CALIB.glb  DART.glb  GROUND.glb  uav.glb
crates/exact/: Cargo.toml
crates/exact/src/: lib.rs
crates/talos-ipc/: Cargo.toml
crates/talos-ipc/src/: layout.rs  lib.rs  publisher.rs  subscriber.rs  triple_buffer.rs
rm_interfaces/: CMakeLists.txt
rm_interfaces/msg/: Measurement.msg
rm_interfaces/srv/: RunHandEyeCalibration.srv
src/: auto_gen.rs  capture.rs  config.rs  dataset.rs  handler.rs  main.rs  robomaster.rs  ros2.rs  setup.rs  statistic.rs  util.rs
src/capture/: depth.rs  driver.rs  view_copy.rs
src/components/: camera.rs  infantry.rs  mod.rs  physics.rs
src/dataset/: occlusion.rs  prelude.rs  writer.rs
src/robomaster/: armor.rs  common.rs  outpost.rs  power_rune.rs  prelude.rs  tech_core.rs  visibility.rs
src/robomaster/armor/: collision.rs  common.rs  component.rs  construct.rs  marker.rs  prelude.rs
src/robomaster/outpost/: construct.rs  consts.rs  prelude.rs  rotation.rs  update.rs
src/robomaster/power_rune/: collision.rs  common.rs  construct.rs  consts.rs  prelude.rs  rotation.rs  rune.rs  state.rs  visual.rs
src/robomaster/tech_core/: construct.rs  consts.rs  prelude.rs
src/robomaster/vehicle/: movement.rs
src/ros2/: capture.rs  livox.rs  plugin.rs  prelude.rs  topic.rs
src/systems/: camera.rs  chassis_observation.rs  debug.rs  input.rs  mod.rs  projectile.rs  uav.rs
src/talos/: capture.rs  ground_truth.rs  layout.rs  mod.rs  plugin.rs  publisher.rs  shm.rs  subscriber.rs  triple_buffer.rs
src/telemetry/: exporter.rs  frame_data.rs  mod.rs
src/util/: derive.rs  either.rs  entity_query.rs  image.rs
