[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"
default-run = "daedalus"

[features]
ros2 = ["dep:r2r"]
talos = ["dep:memmap2"]
default = ["talos"]

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
avian3d = "0.4"
bevy-inspector-egui = "=0.35.0"
rand = "0"
r2r = { version = "0", optional = true }
memmap2 = { version = "0", optional = true }
crossbeam-channel = "0"
image = "0"
egui = "0"
futures = "0"
exact = { path = "crates/exact" }
toml = "0"
notify = "8"
serde = { version = "1", features = ["derive"] }
