[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "jpeg"] }
avian3d = "0.6"
bevy-inspector-egui = "0.36"
memmap2 = { version = "0" }

[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"
default-run = "daedalus"

[features]
ros2 = ["dep:r2r"]
talos = ["dep:talos-ipc"]
ffmpeg = ["dep:ffmpeg-next"]
default = ["talos"]

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy-inspector-egui = { workspace = true }
rand = "0"
r2r = { version = "0", optional = true }
talos-ipc = { path = "crates/talos-ipc", optional = true }
crossbeam-channel = "0"
image = "0"
egui = "0"
futures = "0"
exact = { path = "crates/exact" }
toml = "1"
notify = "8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
ffmpeg-next = { version = "8.0.0", optional = true }

[[bin]]
name = "talos_gimbal_mock_server"
path = "src/bin/talos_gimbal_mock_server.rs"
required-features = ["talos", "ffmpeg"]

[patch.crates-io]
r2r_msg_gen = { path = "third_party/r2r_msg_gen" }
